# flying-windows

./: .gitignore  LICENSE  README.md  index.html
JavaScript/: index.html  index.js
Rust/: Cargo.toml  index.html  start.sh
Rust/src/: browser_manager.rs  color.rs  image_factory.rs  lib.rs
pkg/: flying_windows_homage.d.ts  flying_windows_homage.js  flying_windows_homage_bg.wasm  flying_windows_homage_bg.wasm.d.ts  package.json
