[package]
name = "flying-windows-homage"
version = "0.1.0"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'Window',
]
